--- a/handheld/gaviar/asm_setup.htm
+++ b/handheld/gaviar/asm_setup.htm
@@ -52,7 +52,7 @@
 </p>
 <pre>
 $ cd
-$ wget https://occ-oss-prod.oss-cn-hangzhou.aliyuncs.com/resource/1663142514282/Xuantie-900-gcc-linux-5.10.4-glibc-x86_64-V2.6.1-20220906.tar.gz
+$ wget https://github.com/steward-fu/archives/releases/download/f133/Xuantie-900-gcc-linux-5.10.4-glibc-x86_64-V2.6.1-20220906.tar.gz
 $ tar xvf Xuantie-900-gcc-linux-5.10.4-glibc-x86_64-V2.6.1-20220906.tar.gz
 $ sudo mv Xuantie-900-gcc-linux-5.10.4-glibc-x86_64-V2.6.1 /opt/f133
 $ export PATH=/opt/f133/bin:$PATH
