--- a/handheld.htm
+++ b/handheld.htm
@@ -290,6 +290,10 @@ gen_checksum.py</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/gaviar/asm_watchdog.htm">
     Watchdog</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/gaviar/asm_hstimer0.htm">
+    HSTimer0</a><br>
 <br><br><br><br>
 
 <div id="handmade01"></div>
