--- a/handheld.htm
+++ b/handheld.htm
@@ -294,6 +294,10 @@ gen_checksum.py</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/gaviar/asm_hstimer0.htm">
     HSTimer0</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/gaviar/asm_hstimer1.htm">
+    HSTimer1</a><br>
 <br><br><br><br>
 
 <div id="handmade01"></div>
