--- a/handheld.htm
+++ b/handheld.htm
@@ -298,6 +298,10 @@ gen_checksum.py</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/gaviar/asm_hstimer1.htm">
     HSTimer1</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/gaviar/asm_pwm7.htm">
+    PWM7</a><br>
 <br><br><br><br>
 
 <div id="handmade01"></div>
