--- a/handheld.htm
+++ b/handheld.htm
@@ -256,6 +256,10 @@ Memory Map</a><br>
 <a href="mcu/f133/gen_checksum.htm">
 gen_checksum.py</a><br>
 
+&lowast;
+<a href="handheld/gaviar/mio.htm">
+GPIO Multiplex Function</a><br>
+
 &oplus;
 <b>Assembly</b><br>
     
