--- a/handheld.htm
+++ b/handheld.htm
@@ -260,6 +260,10 @@ gen_checksum.py</a><br>
 <a href="handheld/gaviar/mio.htm">
 GPIO Multiplex Function</a><br>
 
+&lowast;
+<a href="handheld/gaviar/solution.htm">
+Intelligent Speaker Solution</a><br>
+
 &oplus;
 <b>Assembly</b><br>
     
