Gaviar How to use uart4.

--- a/handheld.htm
+++ b/handheld.htm
@@ -286,7 +286,11 @@ Intelligent Speaker Solution</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/gaviar/asm_ccu.htm">
     CCU</a><br>
-    
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/gaviar/asm_uart.htm">
+    UART</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/gaviar/asm_timer0.htm">
     Timer0</a><br>
