Gaviar How to solder uart.

--- a/handheld.htm
+++ b/handheld.htm
@@ -253,6 +253,10 @@ LCD腳位</a><br>
 Memory Map</a><br>
 
 &lowast;
+<a href="handheld/gaviar/uart.htm">
+焊接UART接頭</a><br>
+
+&lowast;
 <a href="mcu/f133/gen_checksum.htm">
 gen_checksum.py</a><br>
 
