Gaviar How to initialize lcd panel.

--- a/handheld.htm
+++ b/handheld.htm
@@ -318,6 +318,10 @@ Intelligent Speaker Solution</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/gaviar/asm_pwm7.htm">
     PWM7</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/gaviar/asm_lcd.htm">
+    LCD (GPIO)</a><br>
 <br><br><br><br>
 
 <div id="handmade01"></div>
