--- a/handheld.htm
+++ b/handheld.htm
@@ -321,7 +321,7 @@ Intelligent Speaker Solution</a><br>
     
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/gaviar/asm_lcd.htm">
-    LCD (GPIO)</a><br>
+    LCD</a><br>
 <br><br><br><br>
 
 <div id="handmade01"></div>
