--- a/handheld/gaviar/asm_lcd.htm
+++ b/handheld/gaviar/asm_lcd.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Gaviar (小志掌機) &gt;&gt; Assembly</h3>
-<p><b>LCD (GPIO)</b></p>
+<p><b>LCD</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
