--- a/handheld/gaviar/uart.htm
+++ b/handheld/gaviar/uart.htm
@@ -29,7 +29,7 @@
   <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
   
   <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
+  <script type="text/javascript" src="../../scripts/shBrushScad.js"></script>
 
   <!-- Conditional comment to apply opacity fix for IE #content background.
        Invalid CSS, but can be removed without harming design -->
@@ -55,7 +55,54 @@
 <img src="uart/1.jpg" class="maxSize"><br><br>
 
 接線方式<br>
-<img src="uart/2.jpg" class="maxSize">
+<img src="uart/2.jpg" class="maxSize"><br><br>
+
+OpenSCAD
+</p>
+
+<pre class="brush:scad">
+difference(){
+	import("V20-bottom.stl");
+	translate([-23, 10, -5]){
+		cube([10, 10, 10]);
+	}
+}
+
+translate([42.1, -4.5, -3]){
+	cube([1.5, 3, 3]);
+}
+translate([42.1, 8.1, -3]){
+	cube([1.5, 3, 3]);
+}
+</pre><br>
+
+<p>
+UART位置<br>
+<img src="uart/3.jpg" class="maxSize"><br><br>
+
+因為司徒的3D印表機精度不夠，只好補強音量鍵<br>
+<img src="uart/4.jpg" class="maxSize"><br><br>
+
+3D印表機列印<br>
+<img src="uart/5.jpg" class="maxSize"><br><br>
+
+還不錯<br>
+<img src="uart/6.jpg" class="maxSize"><br><br>
+
+下邊<br>
+<img src="uart/7.jpg" class="maxSize"><br><br>
+
+側邊<br>
+<img src="uart/8.jpg" class="maxSize"><br><br>
+
+上邊<br>
+<img src="uart/9.jpg" class="maxSize"><br><br>
+
+側邊<br>
+<img src="uart/10.jpg" class="maxSize"><br><br>
+
+背面<br>
+<img src="uart/11.jpg" class="maxSize">
 </p>
 
 <p>
