--- a/handheld/gaviar/asm_uart.htm
+++ b/handheld/gaviar/asm_uart.htm
@@ -53,6 +53,12 @@
 2. <a href="https://en.wikipedia.org/wiki/Delay_slot">Delay_slot</a><br>
 3. <a href="https://github.com/Ouyancheng/FlatHeadBro">FlatHeadBro</a><br><br>
 
+UART是連接到PB2、PB3<br>
+<img src="sch2/1.jpg" class="maxSize"><br><br>
+
+PB2、PB3<br>
+<img src="asm_uart/6.jpg" class="maxSize"><br><br>
+
 CCU位址<br>
 <img src="asm_ccu/1.jpg" class="maxSize"><br><br>
 
