--- a/handheld/gaviar/sch2.htm
+++ b/handheld/gaviar/sch2.htm
@@ -51,7 +51,7 @@
 參考資訊：<br>
 1. <a href="https://github.com/steward-fu/archives/releases?q=f133&expanded=true">github</a><br><br>
 
-UART是一個相當方便的除錯方式，建議可以保留<br>
+CPU電路<br>
 <img src="sch2/1.jpg" class="maxSize"><br><br>
 
 充電電路<br>
