--- a/program.htm
+++ b/program.htm
@@ -987,6 +987,10 @@ Flat Assembler (FASM)</h3>
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/fasm/win32_pie.htm">
             Draw Pie</a><br>
+            
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/fasm/win32_text.htm">
+            Draw Text</a><br>
 <br><br><br><br>
 
 <div id="wine"></div>
