--- a/handheld/zpg-pro/build_sdl1.2.htm
+++ b/handheld/zpg-pro/build_sdl1.2.htm
@@ -66,7 +66,7 @@ $ cd
 $ wget http://www.libsdl.org/release/SDL-1.2.15.tar.gz
 $ tar xvf SDL-1.2.15.tar.gz
 $ cd SDL-1.2.15
-$ autoreconf
+$ ./autoreconf
 $ ./configure --prefix=/usr/arm-linux-gnueabihf --build=arm-linux-gnueabihf --host=arm-linux --disable-esd --disable-video-x11
 $ make -j4
 </pre><br>
