Gaviar i80 panel introduction.

--- a/handheld.htm
+++ b/handheld.htm
@@ -261,6 +261,10 @@ Memory Map</a><br>
 gen_checksum.py</a><br>
 
 &lowast;
+<a href="handheld/gaviar/i80.htm">
+關於8080屏、i80屏、MCU屏</a><br>
+
+&lowast;
 <a href="handheld/gaviar/mio.htm">
 GPIO Multiplex Function</a><br>
 
@@ -6287,6 +6291,10 @@ SDL Key</a><br>
 <a href="handheld/miyoo-mini/fix_sdl2_cpuinfo.htm">
 解決"No conversion from source format to float available"問題</a><br>
     
+&lowast;
+<a href="handheld/miyoo-mini/build_onion.htm">
+build onion</a><br>
+
 &oplus;
 <b>Stock</b><br>
 
