--- a/handheld/gaviar/i80.htm
+++ b/handheld/gaviar/i80.htm
@@ -68,7 +68,7 @@ MCU在顯示圖像時，會固定從RAM(或稱呼：顯示記憶體、Graphic RA
 當F133透過TCON_LCD i80介面傳送資料給屏時(黃色的像素)，由於共用同一塊RAM，因此，RAM的內容被更新成黃色，同時，屏的MCU也正在更新圖像到屏上，因此，變成第一個畫面(紅色)和第二個畫面(黃色)的交疊狀況，如下圖<br>
 <img src="i80/5.jpg" class="maxSize"><br><br>
 
-那i80屏的撕裂問題如何解決呢？其實，一般i80屏都會拉出TE/FRAME腳位，這個腳位一般不使用，因為它跟時序高度相關，需要同步處理，同常TE/FRAME腳位都會懸空，不過，TE/FRAME腳位其實是用來告知<b>屏的MCU是否正在更新圖像(讀取RAM)</b>，因此，為了避免撕裂，F133 TCON_LCD可以在MCU空閒時，傳送更新的資料，這樣就可以避免撕裂<br>
+那i80屏的撕裂問題如何解決呢？其實，一般i80屏都會拉出TE/FRAME腳位，這個腳位一般不使用，因為它跟時序高度相關，需要同步處理，同常TE/FRAME腳位都會懸空，不過，TE/FRAME腳位其實是用來說明<b>屏的MCU是否正在更新圖像(讀取RAM)</b>，因此，為了避免撕裂，F133 TCON_LCD可以在MCU空閒時，傳送更新的資料，這樣就可以避免撕裂<br>
 <img src="i80/6.jpg" class="maxSize"><br><br>
 
 那是不是搞定TE/FRAME腳位後，屏就不會撕裂？答案：不是，因為，從模擬器、顯示驅動到硬件傳送都可能會有撕裂問題，所以要確保顯示品質，任何經過的地方都必須仔細處理才可以保證畫面不撕裂<br>
