--- a/handheld/gaviar/i80.htm
+++ b/handheld/gaviar/i80.htm
@@ -51,7 +51,7 @@
 參考資訊：<br>
 1. <a href="https://www.pinteric.com/displays.html">display</a><br><br>
 
-一般常說的8080屏、i80屏、MCU屏，指的就是傳輸資料的方式是使用Intel 8080的讀寫方式，其實早期是有兩種大派別，分別是Intel 8080和Motorora 6800，至於為何後來都用Intel 8080，這應該不用多說，8080和6800的格式可以從下圖知曉<br>
+一般常說的8080屏、i80屏、MCU屏，指的就是傳輸資料的方式是使用Intel 8080的讀寫方式，其實早期是有兩大派別，分別是Intel 8080和Motorola 6800，至於為何後來都用Intel 8080，這應該不用多說，8080和6800的格式可以從下圖知曉<br>
 <img src="i80/1.jpg" class="maxSize"><br><br>
 
 那為何i80屏需要做初始化呢？因為裡面有專門用來做顯示處理的MCU，因此，需要設定一些參數，如：width=320, height=240, fps=60等參數，所以傳送給屏的資料會分成Data和Command，當然，有些特殊制定規格的屏就不須要初始化，因為參數都已經寫死並且固定在MCU裡，不過，市面上比較難購買到這類產品<br>
