--- a/program.htm
+++ b/program.htm
@@ -1109,9 +1109,9 @@ Wine</h3>
             <a href="program/wine/cpp_text.htm">
             Draw Text</a><br>
                     
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-                <a href="program/wine/cpp_dlg_bitblt.htm">
-                BitBlt</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/wine/cpp_bitblt.htm">
+            Device Context BitBlt</a><br>
                     
                 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
                 <a href="program/wine/cpp_dlg_stretchblt.htm">
