MinGW How to use bitblt().

--- a/program.htm
+++ b/program.htm
@@ -1319,6 +1319,10 @@ MinGW</h3>
             <a href="program/mingw/cpp_text.htm">
             Draw Text</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/mingw/cpp_bitblt.htm">
+            Device Context BitBlt</a><br>
+
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/mingw/enum_hid.htm">
         Enumerate USB HID</a><br>
