ASUS C100P How to turn developer mode on.

--- a/umpc.htm
+++ b/umpc.htm
@@ -2211,6 +2211,10 @@ ASUS C100P</h3>
 <a href="umpc/c100p/review.htm">
 介紹</a><br>
 
+&lowast;
+<a href="umpc/c100p/devmode.htm">
+如何進入Developer Mode</a><br>
+
 &oplus;
 <b>Debian 10</b><br>
 
