Gaviar Add keypad introduction.

--- a/handheld.htm
+++ b/handheld.htm
@@ -245,6 +245,10 @@ Gaviar (小志掌機)</h3>
 LCD腳位</a><br>
 
 &lowast;
+<a href="handheld/gaviar/keypad.htm">
+關於按鍵</a><br>
+
+&lowast;
 <a href="handheld/gaviar/sch2.htm">
 電路改進</a><br>
 
