--- a/handheld.htm
+++ b/handheld.htm
@@ -245,10 +245,6 @@ Gaviar (小志掌機)</h3>
 LCD腳位</a><br>
 
 &lowast;
-<a href="handheld/gaviar/keypad.htm">
-關於按鍵</a><br>
-
-&lowast;
 <a href="handheld/gaviar/sch2.htm">
 電路改進</a><br>
 
@@ -263,6 +259,10 @@ Memory Map</a><br>
 &lowast;
 <a href="mcu/f133/gen_checksum.htm">
 gen_checksum.py</a><br>
+
+&lowast;
+<a href="handheld/gaviar/keypad.htm">
+關於按鍵、類比搖桿</a><br>
 
 &lowast;
 <a href="handheld/gaviar/i80.htm">
