Miyoo Mini Plus Added review page.

--- a/handheld.htm
+++ b/handheld.htm
@@ -198,6 +198,7 @@
     <a href="#pocketgo"><img src="img/photos/pocketgo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PocketGo"/></a>
     <a href="#miyoomax"><img src="img/photos/miyoomax.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Miyoo Max"/></a>
     <a href="#miyoomini"><img src="img/photos/miyoo-mini.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Miyoo Mini"/></a>
+    <a href="#miyoominiplus"><img src="img/photos/miyoo-mini-plus.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Miyoo Mini Plus"/></a>
     <a href="#32blit"><img src="img/photos/32blit.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="32blit"/></a>
     <a href="#gg"><img src="img/photos/gg.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="GameGadget"/></a>
     <a href="#ms-pac"><img src="img/photos/ms-pac.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MS PAC-MAN"/></a>
@@ -6418,6 +6419,16 @@ build onion</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/miyoo-mini/parasyte_build_ffplay.htm">
     build ffplay(SDL 1.2)</a><br>
+<br><br><br><br>
+
+<div id="miyoominiplus"></div>
+<h3><img src="img/photos/miyoo-mini-plus.jpg" class="floatLeft"/>
+Miyoo Mini Plus</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="handheld/miyoo-mini-plus/review.htm">
+介紹</a><br>
 <br><br><br><br>
 
 <div id="32blit"></div>
