Miyoo Mini Plus Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6429,6 +6429,10 @@ Miyoo Mini Plus</h3>
 &lowast;
 <a href="handheld/miyoo-mini-plus/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="handheld/miyoo-mini-plus/teardown.htm">
+拆機</a><br>
 <br><br><br><br>
 
 <div id="32blit"></div>
