--- a/phone/n900/maemo/git.htm
+++ b/phone/n900/maemo/git.htm
@@ -49,6 +49,9 @@
 <p><b>Git操作</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://git-lfs.com/">git-lfs</a><br><br>
+
 Create Repository
 </p>
 <pre>
@@ -70,26 +73,15 @@ $ curl -X DELETE -u <b>USER:PASSWORD</b> https://api.github.com/repos/<b>USER</b
 </pre><br>
 
 <p>
-Pull Repository
+Push Large File
 </p>
 <pre>
-$ git pull
-</pre><br>
-
-<p>
-Clone Repository
-</p>
-<pre>
-$ git clone ssh://git@github.com/<b>USER</b>/<b>REPO</b>.git
-</pre><br>
-
-<p>
-Commit Repository
-</p>
-<pre>
-$ git add --all .
-$ git commit -m "<b>COMMIT</b>"
-$ git push origin master
+$ git lfs install
+$ git lfs track "*.ova"
+$ git add .gitattributes
+$ git add xxx.ova
+$ git commit -m "added large file"
+$ git push
 </pre><br>
 
 <p>
