--- a/phone/n900/maemo/git.htm
+++ b/phone/n900/maemo/git.htm
@@ -77,11 +77,11 @@ Push Large File
 </p>
 <pre>
 $ git lfs install
-$ git lfs track "*.ova"
-$ git add .gitattributes
-$ git add xxx.ova
+$ git lfs track "xxx/**"
+$ git add .
 $ git commit -m "added large file"
 $ git push
+    Uploading LFS objects: 60% (0/1), 100MB | 900KB/s
 </pre><br>
 
 <p>
