Miyoo Mini Plus How to solder UART.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6433,6 +6433,10 @@ Miyoo Mini Plus</h3>
 &lowast;
 <a href="handheld/miyoo-mini-plus/teardown.htm">
 拆機</a><br>
+
+&lowast;
+<a href="handheld/miyoo-mini-plus/uart.htm">
+焊接UART腳位(PL-2303SA)</a><br>
 <br><br><br><br>
 
 <div id="32blit"></div>
