Miyoo Mini Plus Refined.

--- a/handheld/miyoo-mini-plus/uart.htm
+++ b/handheld/miyoo-mini-plus/uart.htm
@@ -75,7 +75,8 @@ UART位置<br>
 <img src="uart/10.jpg" class="maxSize"><br><br>
 
 完美的開發機器<br>
-<img src="uart/11.jpg" class="maxSize"><br><br>
+<img src="uart/11.jpg" class="maxSize"><br>
+P.S. 由於只有焊接單面USB D+/D-，USB接線會有方向性<br><br>
 
 Baudrate (115200bps)
 </p>
