Miyoo Mini Plus How to restore spi flash via u-boot.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6437,6 +6437,10 @@ Miyoo Mini Plus</h3>
 &lowast;
 <a href="handheld/miyoo-mini-plus/uart.htm">
 焊接UART腳位(PL-2303SA)</a><br>
+
+&lowast;
+<a href="handheld/miyoo-mini-plus/restore_spi.htm">
+如何透過U-Boot回復SPI資料</a><br>
 <br><br><br><br>
 
 <div id="32blit"></div>
