Miyoo Mini Plus Refined.

--- a/handheld/miyoo-mini-plus/restore_spi.htm
+++ b/handheld/miyoo-mini-plus/restore_spi.htm
@@ -58,7 +58,8 @@
 更新步驟：<br>
 1. 格式化MicroSD的第一分區成FAT32<br>
 2. 將<a href="https://github.com/steward-fu/archives/releases/download/miyoo-mini-plus/spi.img">spi.img</a>放到MicroSD根目錄<br>
-3. 開機後，透過UART輸入任何字元，藉此中斷U-Boot繼續執行
+3. 按住鍵盤的Enter鍵(讓UART傳送Enter按鍵，藉此中斷U-Boot繼續執行)<br>
+4. Miyoo Mini Plus開機
 </p>
 <pre>
 SigmaStar # version
