Miyoo Mini Plus Added dmesg log.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6435,6 +6435,10 @@ Miyoo Mini Plus</h3>
 拆機</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini-plus/dmesg.htm">
+dmesg</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini-plus/uart.htm">
 焊接UART腳位(PL-2303SA)</a><br>
 
