Miyoo Mini Plus How to repack uImage.xz file.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6439,6 +6439,10 @@ Miyoo Mini Plus</h3>
 dmesg</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini-plus/uimage.htm">
+repack uImage.xz</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini-plus/uart.htm">
 焊接UART腳位(PL-2303SA)</a><br>
 
