--- a/handheld.htm
+++ b/handheld.htm
@@ -6449,6 +6449,10 @@ repack uImage.xz</a><br>
 &lowast;
 <a href="handheld/miyoo-mini-plus/restore_spi.htm">
 如何透過U-Boot回復SPI資料</a><br>
+
+&lowast;
+<a href="handheld/miyoo-mini-plus/fatload.htm">
+解決"SigmaStar U-Boot fatload"不正常的問題</a><br>
 <br><br><br><br>
 
 <div id="32blit"></div>
