--- a/handheld/miyoo-mini-plus/fatload.htm
+++ b/handheld/miyoo-mini-plus/fatload.htm
@@ -48,8 +48,11 @@
 <p><b>解決"SigmaStar U-Boot fatload"不正常的問題</b></p>
 <hr size="1">
 <p>
-SigmaStar U-Boot的fatload命令是一個極不穩定的命令，建議改用<b>mmc read</b>取代fatload，改動的部份則是將檔案寫到固定磁區即可
+SigmaStar U-Boot的fatload命令是一個極不穩定的命令，建議改用<b>mmc read</b>取代fatload，改動的部份則是將檔案寫到固定磁區即可，如下範例：
 </p>
+<pre>
+bootcmd=mmc read 0x22000000 10 2000;bootm 0x22000000
+</pre><br>
 
 <p>
 <br><a href="../../handheld.htm">返回上一頁</a>
