--- a/handheld.htm
+++ b/handheld.htm
@@ -6451,6 +6451,10 @@ repack uImage.xz</a><br>
 如何透過U-Boot回復SPI資料</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini-plus/ch341a.htm">
+如何透過CH341A燒錄器回復SPI資料</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini-plus/fatload.htm">
 解決"SigmaStar U-Boot fatload"不正常的問題</a><br>
 <br><br><br><br>
