--- a/handheld/miyoo-mini-plus/fatload.htm
+++ b/handheld/miyoo-mini-plus/fatload.htm
@@ -51,7 +51,7 @@
 SigmaStar U-Boot的fatload命令是一個極不穩定的命令，建議改用<b>mmc read</b>取代fatload，改動的部份則是將檔案寫到固定磁區即可，如下範例：
 </p>
 <pre>
-bootcmd=mmc read 0x22000000 10 2000;bootm 0x22000000
+bootcmd=gpio output 85 1; bootlogo 0 0 0 0 0; mw 1f001cc0 11; gpio out 8 0; mmc read 0x22000000 10 2000; gpio out 8 1; sleepms 1000; gpio output 4 1; bootm 0x22000000
 </pre><br>
 
 <p>
