Miyoo Mini Plus Added pin image.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6439,6 +6439,10 @@ Miyoo Mini Plus</h3>
 dmesg</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini-plus/pin.htm">
+腳位圖</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini-plus/block.htm">
 方塊圖</a><br>
 
