Miyoo Mini Plus Refined.

--- a/handheld/miyoo-mini-plus/pin.htm
+++ b/handheld/miyoo-mini-plus/pin.htm
@@ -49,8 +49,8 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://www.comake.online/">comake</a><br>
-2. <a href="http://blog.itpub.net/69996837/viewspace-2763889">itpub</a><br><br>
+1. <a href="http://blog.itpub.net/69996837/viewspace-2763889">itpub</a><br>
+2. <a href="https://www.comake.online/">comake</a><br><br>
 
 如下：<br>
 <img src="pin/1.jpg" class="maxSize">
