Miyoo Mini Plus How to find out keypad pinout through u-boot command.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6459,6 +6459,10 @@ repack uImage.xz</a><br>
 如何透過U-Boot回復SPI資料</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini-plus/find_pin.htm">
+如何透過U-Boot找出按鍵腳位</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini-plus/ch341a.htm">
 如何透過CH341A燒錄器回復SPI資料</a><br>
 
