Miyoo Mini Plus Added pinout table.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6435,6 +6435,10 @@ Miyoo Mini Plus</h3>
 拆機</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini-plus/pinout.htm">
+接腳</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini-plus/dmesg.htm">
 dmesg</a><br>
 
