Miyoo Mini Plus Refined.

--- a/handheld/miyoo-mini-plus/pinout.htm
+++ b/handheld/miyoo-mini-plus/pinout.htm
@@ -67,6 +67,9 @@
 <tr><th>R1</th><td>GPIO-47</td></tr>
 <tr><th>R2</th><td>GPIO-90</td></tr>
 <tr><th>LCD BL</th><td>GPIO-4</td></tr>
+<tr><th>VOL-</th><td>GPIO-42</td></tr>
+<tr><th>VOL+</th><td>GPIO-43</td></tr>
+<tr><th>POWER</th><td>GPIO-71</td></tr>
 </table><br>
 
 <p>
