Miyoo Mini Plus How to extract dts from kernel.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6471,6 +6471,10 @@ repack uImage.xz</a><br>
 如何透過CH341A燒錄器回復SPI資料</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini-plus/extract_dts.htm">
+如何Extract Kernel Device Tree</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini-plus/fatload.htm">
 解決"SigmaStar U-Boot fatload"不正常的問題</a><br>
 <br><br><br><br>
