Miyoo Mini Plus How to get gpio value.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6477,6 +6477,12 @@ repack uImage.xz</a><br>
 &lowast;
 <a href="handheld/miyoo-mini-plus/fatload.htm">
 解決"SigmaStar U-Boot fatload"不正常的問題</a><br>
+
+&oplus;
+<b>C/C++</b><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/miyoo-mini-plus/cpp_gpio.htm">
+    Read GPIO</a><br>
 <br><br><br><br>
 
 <div id="32blit"></div>
