Miyoo Mini Plus How to extract u-boot from mtdblock0.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6459,6 +6459,10 @@ repack uImage.xz</a><br>
 焊接UART腳位(PL-2303SA)</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini-plus/extract_uboot.htm">
+如何Extract U-Boot</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini-plus/restore_spi.htm">
 如何透過U-Boot回復SPI資料</a><br>
 
