--- a/handheld.htm
+++ b/handheld.htm
@@ -6451,6 +6451,10 @@ dmesg</a><br>
 方塊圖</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini-plus/gpio_addr.htm">
+GPIO Address</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini-plus/uimage.htm">
 repack uImage.xz</a><br>
 
