Miyoo Mini Plus How to adjust pwm setting.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6463,6 +6463,10 @@ repack uImage.xz</a><br>
 焊接UART腳位(PL-2303SA)</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini-plus/pwm.htm">
+如何調整PWM</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini-plus/extract_uboot.htm">
 如何Extract U-Boot</a><br>
 
