--- a/handheld/fc3000/wheezy.htm
+++ b/handheld/fc3000/wheezy.htm
@@ -100,7 +100,7 @@ $ sudo chroot wheezy
 # nano /etc/fstab
     /swap.img none  swap  sw  0  0
 
-# dd if=/dev/swap.img of=/swap.img bs=1M count=512
+# dd if=/dev/zero of=/swap.img bs=1M count=512
 # mkswap /swap.img
 # exit
 
@@ -236,7 +236,7 @@ int main(int argc, char** argv)
     GtkWidget *win;
     GtkWidget *label;
 
-    gtk_init(&amp;argc, &argv);
+    gtk_init(&amp;argc, &amp;argv);
     win = gtk_window_new(GTK_WINDOW_TOPLEVEL);
 
     label = gtk_label_new("Hello, world!");
