--- a/handheld.htm
+++ b/handheld.htm
@@ -6495,6 +6495,10 @@ repack uImage.xz</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/miyoo-mini-plus/cpp_gpio.htm">
     Read GPIO</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/miyoo-mini-plus/cpp_sdl.htm">
+    SDL Screen Rotation</a><br>
 <br><br><br><br>
 
 <div id="32blit"></div>
