Pyra Added review page.

--- a/handheld.htm
+++ b/handheld.htm
@@ -74,6 +74,7 @@
 <div id="page">
 <br><br>
 <p>
+    <a href="#pyra"><img src="img/photos/pyra.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Pyra"/></a>
     <a href="#pandora1"><img src="img/photos/pandora.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Pandora 1GHz"/></a>
     <a href="#pandora2"><img src="img/photos/pandora.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Pandora Rebirth"/></a>
     <a href="#pandora3"><img src="img/photos/pandora.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Pandora Classic"/></a>
@@ -216,6 +217,16 @@
 <div id="page">
 <br><br>
 <p>
+<div id="pyra"></div>
+<h3><img src="img/photos/pyra.jpg" class="floatLeft"/>
+Pyra</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="handheld/pyra/review.htm">
+介紹</a><br>
+<br><br><br><br>
+
 <div id="pandora1"></div>
 <h3><img src="img/photos/pandora.jpg" class="floatLeft"/>
 Pandora 1GHz</h3>
