Pyra Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -225,6 +225,14 @@ Pyra</h3>
 &lowast;
 <a href="handheld/pyra/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="handheld/pyra/teardown.htm">
+拆機</a><br>
+
+&lowast;
+<a href="handheld/pyra/setup.htm">
+安裝系統</a><br>
 <br><br><br><br>
 
 <div id="pandora1"></div>
