Pyra Fix pcb issue.

--- a/handheld.htm
+++ b/handheld.htm
@@ -233,6 +233,10 @@ Pyra</h3>
 &lowast;
 <a href="handheld/pyra/setup.htm">
 安裝系統</a><br>
+
+&lowast;
+<a href="handheld/pyra/fix_pcb.htm">
+修復按鍵問題</a><br>
 <br><br><br><br>
 
 <div id="pandora1"></div>
