--- a/handheld/pyra/setup.htm
+++ b/handheld/pyra/setup.htm
@@ -57,14 +57,12 @@
 </p>
 <pre>
 $ cd
-$ wget https://packages.pyra-handheld.com/images/bookworm/bookworm1.img.7z
-$ 7za x bookworm1.img.7z
-$ sudo dd if=bookworm1.img of=/dev/sdX bs=1M
-</pre><br>
-
+$ wget https://packages.pyra-handheld.com/images/bullseye/bullseye-5-install.img.7z
+$ 7za x bullseye-5-install.img.7z
+$ sudo dd if=bullseye-5-install.img of=/dev/sdX bs=1M
+</pre>
 <p>
-將SDCard插入左邊的卡槽後，開機就會開始更新，系統安裝完成後，記得先拔除SDCard後，再重新開機<br>
-<img src="setup/1.jpg" class="maxSize">
+P.S. 將SDCard插入左邊的卡槽，開啟電源後，系統就會開始安裝(不會有任何提示)，完成後，記得先拔除SDCard後，再重新開機，另外，有install字眼的檔案代表是用來安裝系統的，如果沒有install字眼，如：bullseye-4.img.7z，代表是可開機的系統，因為Pyra左邊的卡槽具有最高的開機優先權<br>
 </p>
 
 <p>
