--- a/handheld/pyra/setup.htm
+++ b/handheld/pyra/setup.htm
@@ -62,7 +62,11 @@ $ 7za x bullseye-5-install.img.7z
 $ sudo dd if=bullseye-5-install.img of=/dev/sdX bs=1M
 </pre>
 <p>
-P.S. 將SDCard插入左邊的卡槽，開啟電源後，系統就會開始安裝(不會有任何提示)，完成後，記得先拔除SDCard後，再重新開機，另外，有install字眼的檔案代表是用來安裝系統的，如果沒有install字眼，如：bullseye-4.img.7z，代表是可開機的系統，因為Pyra左邊的卡槽具有最高的開機優先權<br>
+P.S. 有install字眼的檔案代表是用來安裝系統的，如果沒有install字眼，如：bullseye-4.img.7z，代表是可開機的系統，因為Pyra左邊的卡槽具有最高的開機優先權<br><br>
+
+將SDCard插入左邊的卡槽，開啟電源後，系統就會開始安裝(不會有任何提示)<br>
+<img src="setup/1.jpg" class="maxSize"><br>
+完成後，記得先拔除SDCard後，再重新開機
 </p>
 
 <p>
