--- a/handheld.htm
+++ b/handheld.htm
@@ -237,6 +237,10 @@ Pyra</h3>
 &lowast;
 <a href="handheld/pyra/fix_pcb.htm">
 修復按鍵問題</a><br>
+
+&lowast;
+<a href="handheld/pyra/bootcard.htm">
+如何製作可開機SDCard</a><br>
 <br><br><br><br>
 
 <div id="pandora1"></div>
