Pyra Added shortkey table.

--- a/handheld.htm
+++ b/handheld.htm
@@ -231,6 +231,10 @@ Pyra</h3>
 拆機</a><br>
 
 &lowast;
+<a href="handheld/pyra/shortkey.htm">
+快速鍵</a><br>
+
+&lowast;
 <a href="handheld/pyra/setup.htm">
 安裝系統</a><br>
 
