--- a/handheld/pyra/bootcard.htm
+++ b/handheld/pyra/bootcard.htm
@@ -115,6 +115,8 @@ $ sudo fdisk /dev/sdb
         /dev/sdb1  *      2048    526335    524288  256M 83 Linux
         /dev/sdb2       526336 499744767 499218432  238G 83 Linux
 
+    Command (m for help): w
+
 $ sudo fsck.f2fs /dev/sdb2
 $ sudo resize.f2fs /dev/sdb2
 </pre>
