--- a/handheld/pyra/bootcard.htm
+++ b/handheld/pyra/bootcard.htm
@@ -121,7 +121,7 @@ $ sudo fsck.f2fs /dev/sdb2
 $ sudo resize.f2fs /dev/sdb2
 </pre>
 <p>
-P.S. fsck.f2fs、resize.f2fs建議在Pyra上面執行(使用另一個系統開機)
+P.S. fsck.f2fs、resize.f2fs必須在Pyra上面執行後，才能拿去當作開機SDCard，不能開完機後，再拿去做resize，否則該開機SDCard將無法使用
 </p>
 
 <p>
