Pyra Added charging port image.

--- a/handheld.htm
+++ b/handheld.htm
@@ -235,6 +235,10 @@ Pyra</h3>
 快速鍵</a><br>
 
 &lowast;
+<a href="handheld/pyra/charge.htm">
+充電孔</a><br>
+
+&lowast;
 <a href="handheld/pyra/setup.htm">
 安裝系統</a><br>
 
