--- a/handheld/pyra/teardown.htm
+++ b/handheld/pyra/teardown.htm
@@ -49,7 +49,7 @@
 <p><b>拆機</b></p>
 <hr size="1">
 <p>
-其實司徒一點都不想拆Pyra掌機，因為結構很脆弱，多拆幾次後，螺絲孔可能就崩了，不得已的原因是有一顆鍵盤按鍵，不管怎麼按都沒有反應，司徒只好拆機看一下問題，因此，這篇拆機文章就看看照片就好，詳細的晶片資訊可能要留在下次拆機時，再補上型號<br>
+其實司徒一點都不想拆Pyra掌機，因為結構很脆弱，多拆幾次後，螺絲孔可能就崩了，不得已的原因是有一顆鍵盤按鍵，不管怎麼按都沒有反應，司徒只好拆機看一下問題～<br>
 <img src="teardown/1.jpg" class="maxSize"><br><br>
 
 這個Logo可以透過LED設定顯示不同的顏色<br>
@@ -92,18 +92,39 @@ L、R按鍵<br>
 <img src="teardown/14.jpg" class="maxSize"><br>
 <img src="teardown/15.jpg" class="maxSize"><br><br>
 
+ATH532 01DM A2Y8RA、YJ612 TI6BK CQR6、OMAP-5432、K4B8G1646D-MYK0 x 4、TWL6037、H26M64208EMR、TWL6040A3<br>
+<img src="teardown/26.jpg" class="maxSize"><br><br>
+
 PCB<br>
 <img src="teardown/16.jpg" class="maxSize"><br><br>
+
+701 A1 174、R$102 3199、BQ24297、PCAL6524、1609XAG AS5013<br>
+<img src="teardown/21.jpg" class="maxSize"><br><br>
+
+S30960-S3480-A300-1<br>
+<img src="teardown/22.jpg" class="maxSize"><br><br>
+
+WL18MODGI<br>
+<img src="teardown/27.jpg" class="maxSize"><br><br>
+
+227 TI 4G AZ08、1609XAG AS5013<br>
+<img src="teardown/23.jpg" class="maxSize"><br><br>
 
 正面<br>
 <img src="teardown/17.jpg" class="maxSize"><br><br>
 
-USB UART晶片<br>
+TPD12S016、TCA8418、FT232RQ<br>
 <img src="teardown/18.jpg" class="maxSize"><br><br>
 
 按鍵<br>
-<img src="teardown/19.jpg" class="maxSize"><br>
-<img src="teardown/20.jpg" class="maxSize">
+<img src="teardown/19.jpg" class="maxSize"><br><br>
+<img src="teardown/20.jpg" class="maxSize"><br><br>
+
+鍵盤槽<br>
+<img src="teardown/24.jpg" class="maxSize"><br><br>
+
+FPC<br>
+<img src="teardown/25.jpg" class="maxSize">
 </p>
 
 <p>
