--- a/handheld/pyra/fix_pcb.htm
+++ b/handheld/pyra/fix_pcb.htm
@@ -50,7 +50,8 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://pyra-handheld.com/wiki/index.php?title=Main_Page">wiki</a><br><br>
+1. <a href="https://pyra-handheld.com/wiki/index.php?title=Main_Page">wiki</a><br>
+2. <a href="https://www.pyra-handheld.com/wiki/index.php?title=Keyboard">keyboard</a><br><br>
 
 按鍵"&gt;"，不管怎麼按都沒有反應，更新系統也是一樣<br>
 <img src="fix_pcb/1.jpg" class="maxSize"><br><br>
@@ -58,8 +59,18 @@
 拆開後，發現有一顆元件斷裂了～<br>
 <img src="fix_pcb/2.jpg" class="maxSize"><br><br>
 
-看了一下電路圖，發現是10K電阻，司徒重新焊上後，按鍵就正常了～<br>
-<img src="fix_pcb/3.jpg" class="maxSize">
+看了一下電路圖，應該是10K電阻<br>
+<img src="fix_pcb/3.jpg" class="maxSize"><br><br>
+
+司徒重新焊上後，按鍵就正常了～<br>
+<img src="fix_pcb/7.jpg" class="maxSize"><br><br>
+
+不過，再度看了下其它資料，如下圖，發現應該是要換成二極體，防止鬼鍵問題，而非10K電阻<br>
+<img src="fix_pcb/5.jpg" class="maxSize"><br>
+<img src="fix_pcb/6.jpg" class="maxSize"><br><br>
+
+司徒最後還是改成二極體<br>
+<img src="fix_pcb/4.jpg" class="maxSize">
 </p>
 
 <p>
