Pyra How to build uboot.

--- a/handheld.htm
+++ b/handheld.htm
@@ -249,6 +249,10 @@ Pyra</h3>
 &lowast;
 <a href="handheld/pyra/bootcard.htm">
 如何製作可開機SDCard</a><br>
+
+&lowast;
+<a href="handheld/pyra/build_uboot.htm">
+build uboot</a><br>
 <br><br><br><br>
 
 <div id="pandora1"></div>
