--- a/handheld.htm
+++ b/handheld.htm
@@ -247,6 +247,10 @@ Pyra</h3>
 修復按鍵問題</a><br>
 
 &lowast;
+<a href="handheld/pyra/resize.htm">
+如何Resize SDCard</a><br>
+
+&lowast;
 <a href="handheld/pyra/bootcard.htm">
 如何製作可開機SDCard</a><br>
 
