Pyra How to build kernel.

--- a/handheld.htm
+++ b/handheld.htm
@@ -257,6 +257,10 @@ Pyra</h3>
 &lowast;
 <a href="handheld/pyra/build_uboot.htm">
 build uboot</a><br>
+
+&lowast;
+<a href="handheld/pyra/build_kernel.htm">
+build kernel</a><br>
 <br><br><br><br>
 
 <div id="pandora1"></div>
