--- a/handheld/pyra/build_kernel.htm
+++ b/handheld/pyra/build_kernel.htm
@@ -63,7 +63,10 @@ $ cd letux-kernel
 $ git checkout letux-5.6.y
 $ ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- make pyra_defconfig
 $ ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- make all -j4
-</pre><br>
+</pre>
+<p>
+P.S. omap5-letux-cortex15-v5.3+pyra-v5.3.dtb
+</p>
 
 <p>
 <br><a href="../../handheld.htm">返回上一頁</a>
