--- a/handheld.htm
+++ b/handheld.htm
@@ -247,6 +247,10 @@ Pyra</h3>
 修復按鍵問題</a><br>
 
 &lowast;
+<a href="handheld/pyra/uboot_param.htm">
+預設U-Boot參數</a><br>
+
+&lowast;
 <a href="handheld/pyra/printk.htm">
 printk使用的UART</a><br>
 
