Debian How to change run-level.

--- a/system.htm
+++ b/system.htm
@@ -173,6 +173,10 @@ Resize VDI file</a><br>
 如何把文字轉成圖片</a><br>
 
 &lowast;
+<a href="system/debian/runlevel.htm">
+如何改變Run-Level</a><br>
+
+&lowast;
 <a href="system/debian/jmtpfs.htm">
 如何自動掛載MTP裝置</a><br>
 
