Debian How to turn on color-setting in minicom.

--- a/system.htm
+++ b/system.htm
@@ -237,6 +237,10 @@ VirtualBox產生vboxnet0 192.168.56.1</a><br>
 如何使用png-to-lcd</a><br>
 
 &lowast;
+<a href="system/debian/minicom_color.htm">
+如何讓minicom彩色化</a><br>
+
+&lowast;
 <a href="system/debian/shell2file.htm">
 如何把Shell的執行過程存到檔案</a><br>
 
