--- a/handheld.htm
+++ b/handheld.htm
@@ -263,6 +263,10 @@ printk使用的UART</a><br>
 如何製作可開機SDCard</a><br>
 
 &lowast;
+<a href="handheld/pyra/fix_readonly.htm">
+解決"read-only member vm_flags"問題</a><br>
+
+&lowast;
 <a href="handheld/pyra/interconn.htm">
 Interconnect Overview</a><br>
 
